Add CODEOWNERS file for automatic review requests.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,10 @@
-# config goes here
+# Lines starting with '#' are comments
+
+# Specify owners for the entire repository:
+*       @GHLabs101
+
+# Assign a team for JavaScript files:
+*.js    @GHLabs101
+
+# Owner for changes in docs folder:
+/docs/  @GHLabs101
