--- a/.github/workflows/env-vars.yml
+++ b/.github/workflows/env-vars.yml
@@ -5,13 +5,14 @@ on:
     branches: [main]
 
 jobs:
-  show-vars:
+  auto-comment:
     runs-on: ubuntu-latest
     steps:
-      - name: Show environment variables
-        run: |
-          echo "Repository: $GITHUB_REPOSITORY"
-          echo "Actor: $GITHUB_ACTOR"
-          echo "SHA: $GITHUB_SHA"
-          echo "Event Name: $GITHUB_EVENT_NAME"
-          echo "Workflow: $GITHUB_WORKFLOW"
+      - name: Comment using GitHub Token
+        uses: peter-evans/create-or-update-comment@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: 30
+          body: |
+            👋 This comment was made automatically using the GITHUB_TOKEN!
+
